--- a/Famoser.SyncApi/packages.config
+++ b/Famoser.SyncApi/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Famoser.FrameworkEssentials" version="2.7.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Famoser.SqliteWrapper" version="1.1.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wpa81" />
