--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -39,15 +39,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiClient.cs" />
-    <Compile Include="Entities\ApiConfigurationEntity.cs" />
     <Compile Include="Entities\Api\Base\BaseEntity.cs" />
     <Compile Include="Entities\Api\CollectionEntity.cs" />
+    <Compile Include="Entities\Api\DeviceEntitiy.cs" />
     <Compile Include="Entities\RequestEntity.cs" />
     <Compile Include="Entities\ResponseEntity.cs" />
-    <Compile Include="Entities\Storage\CacheStorageEntity.cs" />
+    <Compile Include="Entities\Storage\Cache\ApiCacheEntity.cs" />
+    <Compile Include="Entities\Storage\Cache\Entitites\CollectionInformations.cs" />
+    <Compile Include="Entities\Storage\Cache\ModelCacheEntity.cs" />
     <Compile Include="Entities\Api\SyncEntity.cs" />
     <Compile Include="Entities\Api\UserEntity.cs" />
-    <Compile Include="Entities\Storage\ModelInformation.cs" />
+    <Compile Include="Entities\Storage\Cache\Entitites\ModelInformation.cs" />
+    <Compile Include="Entities\Storage\Roaming\ApiRoamingEntity.cs" />
     <Compile Include="Enums\ApiError.cs" />
     <Compile Include="Enums\OnlineAction.cs" />
     <Compile Include="Enums\PendingAction.cs" />
