implemented new api storage service

--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Entities\Api\Base\BaseEntity.cs" />
     <Compile Include="Entities\Api\CollectionEntity.cs" />
     <Compile Include="Entities\Api\DeviceEntity.cs" />
+    <Compile Include="Entities\AuthorizationRequest.cs" />
     <Compile Include="Entities\RequestEntity.cs" />
     <Compile Include="Entities\ResponseEntity.cs" />
     <Compile Include="Entities\Storage\Cache\ApiCacheEntity.cs" />
