new repository design

--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Entities\RequestEntity.cs" />
     <Compile Include="Entities\ResponseEntity.cs" />
     <Compile Include="Entities\Storage\Cache\ApiCacheEntity.cs" />
+    <Compile Include="Entities\Storage\Cache\CollectionCacheEntity.cs" />
     <Compile Include="Entities\Storage\Cache\Entitites\CollectionInformations.cs" />
     <Compile Include="Entities\Storage\Cache\ModelCacheEntity.cs" />
     <Compile Include="Entities\Api\SyncEntity.cs" />
@@ -59,15 +60,23 @@
     <Compile Include="Enums\ApiError.cs" />
     <Compile Include="Enums\OnlineAction.cs" />
     <Compile Include="Enums\PendingAction.cs" />
+    <Compile Include="Managers\Interfaces\IManager.cs" />
+    <Compile Include="Managers\Manager.cs" />
     <Compile Include="Models\Interfaces\ICollectionModel.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
+    <Compile Include="Repositories\Interfaces\Base\IBasePersistentRepository.cs" />
+    <Compile Include="Repositories\Interfaces\Base\IPersistentRespository.cs" />
+    <Compile Include="Repositories\Interfaces\IApiCollectionRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IApiDeviceRepository.cs" />
     <Compile Include="Repositories\Interfaces\IAuthRepository.cs" />
+    <Compile Include="Repositories\Interfaces\Base\IPersistentCollectionRespository.cs" />
     <Compile Include="Services\ApiAuthenticationService.cs" />
     <Compile Include="Services\Interfaces\IApiConfigurationService.cs" />
     <Compile Include="Repositories\Interfaces\IApiRepository.cs" />
     <Compile Include="Services\Interfaces\IApiStorageService.cs" />
-    <Compile Include="Managers\Interfaces\IModelManager.cs" />
-    <Compile Include="Managers\ModelManager.cs" />
+    <Compile Include="Managers\Interfaces\ICollectionManager.cs" />
+    <Compile Include="Managers\CollectionManager.cs" />
     <Compile Include="Models\Interfaces\Base\IBaseSyncModel.cs" />
     <Compile Include="Models\Interfaces\IDeviceModel.cs" />
     <Compile Include="Models\Interfaces\ISyncModel.cs" />
