changed folder structure

--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -40,28 +40,30 @@
     <Compile Include="Clients\ApiClient.cs" />
     <Compile Include="Clients\AuthApiClient.cs" />
     <Compile Include="Clients\Base\BaseApiClient.cs" />
-    <Compile Include="Entities\Api\Base\BaseEntity.cs" />
-    <Compile Include="Entities\Api\CollectionEntity.cs" />
-    <Compile Include="Entities\Api\DeviceEntity.cs" />
-    <Compile Include="Entities\AuthorizationRequest.cs" />
-    <Compile Include="Entities\AuthorizationResponse.cs" />
-    <Compile Include="Entities\Base\BaseRequest.cs" />
-    <Compile Include="Entities\Base\BaseResponse.cs" />
-    <Compile Include="Entities\RequestEntity.cs" />
-    <Compile Include="Entities\ResponseEntity.cs" />
-    <Compile Include="Entities\Storage\Cache\ApiCacheEntity.cs" />
-    <Compile Include="Entities\Storage\Cache\CollectionCacheEntity.cs" />
-    <Compile Include="Entities\Storage\Cache\Entitites\CollectionInformations.cs" />
-    <Compile Include="Entities\Storage\Cache\ModelCacheEntity.cs" />
-    <Compile Include="Entities\Api\SyncEntity.cs" />
-    <Compile Include="Entities\Api\UserEntity.cs" />
-    <Compile Include="Entities\Storage\Cache\Entitites\ModelInformation.cs" />
-    <Compile Include="Entities\Storage\Roaming\ApiRoamingEntity.cs" />
+    <Compile Include="Api\Configuration\ApiInformations.cs" />
+    <Compile Include="Api\Base\BaseEntity.cs" />
+    <Compile Include="Api\Communication\Entities\CollectionEntity.cs" />
+    <Compile Include="Api\Communication\Entities\DeviceEntity.cs" />
+    <Compile Include="Api\Communication\Request\AuthorizationRequest.cs" />
+    <Compile Include="Api\Communication\Response\AuthorizationResponse.cs" />
+    <Compile Include="Api\Communication\Request\Base\BaseRequest.cs" />
+    <Compile Include="Api\Communication\Response\Base\BaseResponse.cs" />
+    <Compile Include="Api\Communication\Request\RequestEntity.cs" />
+    <Compile Include="Api\Communication\Response\ResponseEntity.cs" />
+    <Compile Include="Storage\Cache\CacheEntity.cs" />
+    <Compile Include="Storage\Cache\CollectionCacheEntity.cs" />
+    <Compile Include="Api\Communication\Entities\SyncEntity.cs" />
+    <Compile Include="Api\Communication\Entities\UserEntity.cs" />
+    <Compile Include="Storage\Cache\Entitites\ModelInformation.cs" />
+    <Compile Include="Storage\Roaming\ApiRoamingEntity.cs" />
     <Compile Include="Enums\ApiError.cs" />
+    <Compile Include="Enums\AuthenticationState.cs" />
     <Compile Include="Enums\OnlineAction.cs" />
     <Compile Include="Enums\PendingAction.cs" />
+    <Compile Include="Helpers\AuthorizationHelper.cs" />
     <Compile Include="Managers\Interfaces\IManager.cs" />
     <Compile Include="Managers\Manager.cs" />
+    <Compile Include="Models\Interfaces\Base\IUniqueSyncModel.cs" />
     <Compile Include="Models\Interfaces\ICollectionModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="Repositories\Interfaces\Base\IPersistentRespository.cs" />
     <Compile Include="Repositories\Interfaces\IApiCollectionRepository.cs" />
     <Compile Include="Repositories\Interfaces\IApiDeviceRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IApiUserRepository.cs" />
     <Compile Include="Repositories\Interfaces\IAuthRepository.cs" />
     <Compile Include="Repositories\Interfaces\Base\IPersistentCollectionRespository.cs" />
     <Compile Include="Services\ApiAuthenticationService.cs" />
