--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -37,6 +37,8 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Communication\Request\SyncEntityRequest.cs" />
+    <Compile Include="Api\Communication\Response\CollectionEntityResponse.cs" />
     <Compile Include="Clients\ApiClient.cs" />
     <Compile Include="Clients\AuthApiClient.cs" />
     <Compile Include="Clients\Base\BaseApiClient.cs" />
@@ -48,8 +50,8 @@
     <Compile Include="Api\Communication\Response\AuthorizationResponse.cs" />
     <Compile Include="Api\Communication\Request\Base\BaseRequest.cs" />
     <Compile Include="Api\Communication\Response\Base\BaseResponse.cs" />
-    <Compile Include="Api\Communication\Request\RequestEntity.cs" />
-    <Compile Include="Api\Communication\Response\ResponseEntity.cs" />
+    <Compile Include="Api\Communication\Request\CollectionEntityRequest.cs" />
+    <Compile Include="Api\Communication\Response\SyncEntityResponse.cs" />
     <Compile Include="Repositories\ApiDeviceRepository.cs" />
     <Compile Include="Repositories\ApiUserRepository.cs" />
     <Compile Include="Repositories\Base\PersistentRepository.cs" />
