implemented Api & Collection sync

--- a/Famoser.SyncApi.Tests/Famoser.SyncApi.Tests.csproj
+++ b/Famoser.SyncApi.Tests/Famoser.SyncApi.Tests.csproj
@@ -98,6 +98,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CSharpTests\GenericsTest.cs" />
+    <Compile Include="CSharpTests\Models\BaseModel.cs" />
+    <Compile Include="CSharpTests\Models\ChildModel.cs" />
     <Compile Include="Models\NoteModel.cs" />
     <Compile Include="RepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
