--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Api\Communication\Request\CollectionEntityRequest.cs" />
     <Compile Include="Api\Communication\Response\SyncEntityResponse.cs" />
     <Compile Include="Helpers\ApiEntityHelper.cs" />
+    <Compile Include="Helpers\SyncApiHelper.cs" />
     <Compile Include="Models\Base\BaseModel.cs" />
     <Compile Include="Models\CollectionModel.cs" />
     <Compile Include="Models\DeviceModel.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="Repositories\Base\PersistentCollectionRepository.cs" />
     <Compile Include="Repositories\Base\PersistentRepository.cs" />
     <Compile Include="Repositories\ApiCollectionRepository.cs" />
+    <Compile Include="Services\ApiConfigurationService.cs" />
     <Compile Include="Services\Interfaces\Authentication\IApiDeviceAuthenticationService.cs" />
     <Compile Include="Services\Interfaces\Authentication\IApiUserAuthenticationRepository.cs" />
     <Compile Include="Storage\Cache\CacheEntity.cs" />
