--- a/Famoser.SyncApi.NUnitTests/packages.config
+++ b/Famoser.SyncApi.NUnitTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="Famoser.FrameworkEssentials" version="2.7.5" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
 </packages>
