--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ install:
 addons:
     code_climate:
         repo_token: c751ad853eaaaebea4f251b9bf6bbf180e8284933ef90ac559b0929cb0d28c52
+        
+after_script:
+  - vendor/bin/test-reporter
