--- a/Famoser.SyncApi.Webpage/composer.json
+++ b/Famoser.SyncApi.Webpage/composer.json
@@ -22,6 +22,9 @@
     "codeguy/upload": "*",
     "phpunit/phpunit": "^5.6"
   },
+  "require-dev": {
+    "codeclimate/php-test-reporter": "dev-master"
+  },
   "autoload": {
     "psr-4": {
       "Famoser\\SyncApi\\": "src/"
