small naming modifications for consistency

--- a/Famoser.SyncApi/Famoser.SyncApi.csproj
+++ b/Famoser.SyncApi/Famoser.SyncApi.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Api\ApiClient.cs" />
     <Compile Include="Api\Base\BaseApiClient.cs" />
     <Compile Include="Api\Communication\Response\HistoryEntityResponse.cs" />
-    <Compile Include="Api\Configuration\ApiInformationEntity.cs" />
+    <Compile Include="Api\Configuration\ApiInformation.cs" />
     <Compile Include="Api\Communication\Entities\Base\BaseEntity.cs" />
     <Compile Include="Api\Communication\Entities\CollectionEntity.cs" />
     <Compile Include="Api\Communication\Entities\DeviceEntity.cs" />
