--- a/Famoser.SyncApi.NUnitTests/Famoser.SyncApi.NUnitTests.csproj
+++ b/Famoser.SyncApi.NUnitTests/Famoser.SyncApi.NUnitTests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Models\NoteModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryTests.cs" />
+    <Compile Include="Showcases.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
