--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ php:
 install:
     - cd Famoser.SyncApi.Webpage
     - composer install --dev
-    
+
 after_script:
   - ./vendor/bin/test-reporter
+    
+addons:
+    code_climate:
+        repo_token: c751ad853eaaaebea4f251b9bf6bbf180e8284933ef90ac559b0929cb0d28c52
