--- a/Famoser.SyncApi.Webpage/composer.json
+++ b/Famoser.SyncApi.Webpage/composer.json
@@ -23,7 +23,8 @@
     "phpunit/phpunit": "^5.6"
   },
   "require-dev": {
-    "codeclimate/php-test-reporter": "dev-master"
+    "codeclimate/php-test-reporter": "dev-master",
+	"squizlabs/php_codesniffer": "2.*"
   },
   "autoload": {
     "psr-4": {
