--- a/Famoser.SyncApi.Webpage/composer.json
+++ b/Famoser.SyncApi.Webpage/composer.json
@@ -24,12 +24,12 @@
   },
   "require-dev": {
     "codeclimate/php-test-reporter": "dev-master",
-	"squizlabs/php_codesniffer": "2.*",
+    "squizlabs/php_codesniffer": "2.*",
     "deployer/recipes": "^3.1"
   },
   "autoload": {
     "psr-4": {
-      "Famoser\\SyncApi\\": "src/"
+      "Famoser\\SyncApi\\": "src/Famoser/SyncApi/"
     }
   }
 }
