--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,6 +4,10 @@ engines:
     enabled: true
   phpcodesniffer:
     enabled: true
+	checks:
+		#disable Namespaces NamespaceDeclaration BlankLineAfter check as it does not work properly
+		PSR2 Namespaces NamespaceDeclaration BlankLineAfter:
+			enabled: false
   phpmd:
     enabled: true  
     checks:
