--- a/Famoser.SyncApi.Webpage/composer.json
+++ b/Famoser.SyncApi.Webpage/composer.json
@@ -29,7 +29,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Famoser\\SyncApi\\": "src/Famoser/SyncApi/"
+      "Famoser\\SyncApi\\": "src/Famoser/SyncApi/",
+      "Famoser\\SyncApi\\Tests\\": "tests/Famoser/SyncApi/Tests"
     }
   }
 }
